# raiot-sphinx

./: .gitignore  README.md  collect_negative_data.py  live_predict.py  model.md  preprocess_data.py  pyproject.toml  requirements.txt  train_isl_pytorch.py  yolov8n-pose-predict.py
trained_models/: isl_classifier_mediapipe.pth  isl_classifier_yolov8.pth
